--- a/pipcanvas.html
+++ b/pipcanvas.html
@@ -16,8 +16,8 @@
     <div class="loading">加载中。。。</div>
     <canvas width="750" height="1260" id="container"></canvas>
     <div class="collection" style="display:none"></div>
-    <script src="../../lib/index.umd.js"></script>
-    <script src="./index.js"></script>
+    <script src="./lib/index.umd.js"></script>
+    <script src="./lib/index.js"></script>
 </body>
 
 </html>
