--- a/pipcanvas.html
+++ b/pipcanvas.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="loading">加载中。。。</div>
+    <div class="loading"></div>
     <canvas width="750" height="1260" id="container"></canvas>
     <div class="collection" style="display:none"></div>
     <script src="./lib/index.umd.js"></script>
